--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=connectly
 # PostgreSQL Database Configuration
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
-spring.datasource.password=
+spring.datasource.password=112233
 
 # Driver class name
 spring.datasource.driver-class-name=org.postgresql.Driver
