--- a/server/pom.xml
+++ b/server/pom.xml
@@ -101,6 +101,16 @@
             <version>1.5.4.Final</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>2.0.7</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>2.0.7</version>
+        </dependency>
 
     </dependencies>
 
