--- a/client/.gitignore
+++ b/client/.gitignore
@@ -1,5 +1,8 @@
 # See https://docs.github.com/get-started/getting-started-with-git/ignoring-files for more about ignoring files.
 
+# Generated API endpoints
+/src/app/api/
+
 # Compiled output
 /dist
 /tmp
