--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -11,4 +11,6 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 # JPA/Hibernate properties
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.open-in-view=false
+
+spring.output.ansi.enabled=ALWAYS
